Refactor and streamline simple server start

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlin.native.enableDependencyPropagation=false
 kotlin.js.webpack.major.version=4
 kotlin.version=1.7.20
 ktor_version=2.2.2
+kotlinx_html_version=0.8.0"
 serialization_version=1.4.1
 coroutines_version=1.6.4
 agp.version=7.3.0
